--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ClientUrl": "http://0.0.0.0:8080/WeatherForecast/PublishInQueue",
+  "Jaeger": {
+    "ServiceName": "first-api"
+  },
   "AllowedHosts": "*"
 }
